[package]
name = "tuilibre"
version = "0.1.0"
edition = "2021"
authors = ["tuilibre contributors"]
description = "A TUI tool for managing calibre digital libraries"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/tuilibre"
keywords = ["tui", "calibre", "books", "library", "management"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.24"
crossterm = "0.27"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"

[[bin]]
name = "tuilibre"
path = "src/main.rs"

